[package]
name = "cetrizine"
version = "1.1.0"
authors = ["Shelvacu <shelvacu@gmail.com>"]
edition = "2018"

[build-dependencies]
vergen = "3"

[dependencies]
sha2 = "0.7"
chrono = "0.4"
time = "0.1.42"
r2d2_postgres = "0.14"
argparse = "~0.2"
postgres-derive = "0.3"
pbr = "~1.0"
backtrace = "0.3"
log = "0.4"
simplelog = "0.5"
multi_log = "0.1"
typemap = "0.3"
lazy_static = "*"
evmap = "^6.0"
diesel = { version = "1.0.0", features = ["postgres","chrono","r2d2"] }
dotenv = "0.9.0"
reqwest = "0.9"
hex = "0.3"
flate2 = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rusqlite]
version = "~0.18.0"
features = ["chrono","unlock_notify","bundled"]

[dependencies.postgres]
version = "~0.15.2"
features = ["with-serde_json","with-time","with-chrono"]

[dependencies.serenity]
version = "0.6.2-shel3"
path = "./serenity"
default-features = true
features = ["raw-ws-event", "allow_exhaustive_enum"]

[dependencies.coral]
version = "^0.2"
path = "./coral"