[package]
name = "cetrizine"
version = "1.3.0"
authors = ["Shelvacu <shelvacu@gmail.com>"]
edition = "2018"

[build-dependencies]
vergen = "3"

[dependencies]
sha2 = "0.8"
chrono = "0.4"
time = "0.1.42"
argparse = "~0.2"
backtrace = "0.3"
log = "0.4"
multi_log = "0.1"
typemap = "0.3"
lazy_static = "*"
evmap = "^6.0"
reqwest = "0.9"
hex = "0.3"
flate2 = "1.0"
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
graphql_client = "0.8.0"
failure = "0.1.6"
env_logger = "0.7.1"

[dependencies.diesel]
version = "1.4.2"
features = ["postgres","chrono","r2d2"]

[dependencies.serenity]
version = "=0.7.0-shel4"
path = "./serenity"
default-features = true
features = ["raw-ws-event", "allow_exhaustive_enum"]

[dependencies.coral]
version = "^0.2"
path = "./coral"
